# rmesh_rs

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  MSM.md  RADIANCE_MESHES.md  README.md  SAFE_MATH_AUDIT.md  TODO.md  camera.slang  convert.py  counter_settings_renderdoc.json  counters.csv
assets/flare/: license.txt  scene.gltf
crates/rmesh-anim/: Cargo.toml
crates/rmesh-anim/src/: gltf_loader.rs  lib.rs
crates/rmesh-backward/: Cargo.toml
crates/rmesh-backward/benches/: compute_interval.rs  tiled_pipeline.rs
crates/rmesh-backward/examples/: tile_size_sweep.rs
crates/rmesh-backward/src/: lib.rs
crates/rmesh-backward/src/wgsl/: backward_compute.wgsl  backward_tiled_compute.wgsl  interval_chain_back.wgsl
crates/rmesh-backward/tests/: kernel_tests.rs
crates/rmesh-compositor/: Cargo.toml
crates/rmesh-compositor/src/: compositor_pass.rs  geometry.rs  lib.rs  material.rs  primitive_pass.rs
crates/rmesh-compositor/src/wgsl/: primitive.wgsl  primitive_mrt.wgsl
crates/rmesh-data/: Cargo.toml
crates/rmesh-data/src/: gpu_buffers.rs  lib.rs
crates/rmesh-dsm/: Cargo.toml
crates/rmesh-dsm/src/: lib.rs
crates/rmesh-dsm/src/wgsl/: dsm_fourier_fragment.wgsl  dsm_moment_fragment.wgsl  dsm_primitive.wgsl  dsm_project_compute.wgsl  dsm_resolve.wgsl
crates/rmesh-dsm/tests/: cube_view_sample_test.rs  cubemap_orientation_test.rs  light_map_test.rs  probe_vs_cpu_test.rs  write_read_correspondence.rs
crates/rmesh-error/: Cargo.toml
crates/rmesh-error/src/: lib.rs
crates/rmesh-interact/src/: event.rs  lib.rs  state_machine.rs  transform.rs  vertex_select.rs
crates/rmesh-neural/: Cargo.toml
crates/rmesh-neural/src/: ish.rs  lib.rs  mlp_brdf.rs  retro.rs
crates/rmesh-pbd/: Cargo.toml
crates/rmesh-pbd/src/: coloring.rs  island.rs  lib.rs  mesh_topology.rs  solver.rs
crates/rmesh-pbd/src/shaders/: apply_handles.wgsl  finalize.wgsl  predict.wgsl  solve_distance.wgsl
crates/rmesh-postprocess/: Cargo.toml
crates/rmesh-postprocess/src/: lib.rs
crates/rmesh-postprocess/src/wgsl/: ao_bilateral.wgsl  deferred_shade_frag.wgsl
crates/rmesh-postprocess/tests/: dsm_casting_diagnostic.rs
crates/rmesh-python/: Cargo.toml
crates/rmesh-python/python/rmesh_wgpu/: autograd.py
crates/rmesh-python/src/: lib.rs
crates/rmesh-raytrace/: Cargo.toml
crates/rmesh-raytrace/src/: lib.rs
crates/rmesh-render/: Cargo.toml
crates/rmesh-render/benches/: interval_pipeline.rs
crates/rmesh-render/src/: lib.rs
crates/rmesh-render/src/wgsl/: blit.wgsl  deferred_shade.wgsl  deferred_shade_frag.wgsl  forward_compute.wgsl  forward_fragment.wgsl  forward_tiled_compute.wgsl  forward_vertex.wgsl  gtao.wgsl  interval_compute.wgsl  interval_fragment.wgsl  interval_generate.wgsl  interval_mesh.wgsl  interval_tiled_rasterize.wgsl  interval_vertex.wgsl  locate_compute.wgsl  project_compute.wgsl  project_compute_16bit.wgsl  project_compute_hw.wgsl  rasterize_compute.wgsl  raytrace_compute.wgsl  shadow_ray_gen.wgsl  ssgi_bilateral.wgsl  ssgi_compute.wgsl  ssr_compute.wgsl
crates/rmesh-render/tests/: cross_renderer_test.rs  gradient_test.rs  kernel_tests.rs  mrt_test.rs  multi_tet_test.rs  overdraw_stats.rs  single_tet_test.rs
crates/rmesh-render/tests/common/: mod.rs
crates/rmesh-shaders/: Cargo.toml  rustc-ice-2026-02-26T00_33_52-2026753.txt
crates/rmesh-shaders/src/: lib.rs  shared.rs
crates/rmesh-shaders/src/wgsl/: adam_compute.wgsl  backward_compute.wgsl  backward_tiled_compute.wgsl  forward_compute.wgsl  forward_fragment.wgsl  forward_tiled_compute.wgsl  forward_vertex.wgsl  loss_compute.wgsl  radix_sort.wgsl  radix_sort_scan_add.wgsl  radix_sort_scatter.wgsl  tile_fill_compute.wgsl  tile_gen_compute.wgsl  tile_gen_hull_compute.wgsl  tile_ranges_compute.wgsl
crates/rmesh-sim/src/: lib.rs
crates/rmesh-sort/: Cargo.toml
crates/rmesh-sort/benches/: radix_sort.rs
crates/rmesh-sort/src/: basic.rs  cpu.rs  drs.rs  lib.rs
crates/rmesh-sort/src/wgsl/: drs_downsweep.wgsl  drs_scan.wgsl  drs_upsweep.wgsl  radix_sort_count.wgsl  radix_sort_reduce.wgsl  radix_sort_scan.wgsl  radix_sort_scatter.wgsl
crates/rmesh-sort/tests/: correctness.rs
crates/rmesh-tile/: Cargo.toml
crates/rmesh-tile/src/: lib.rs
crates/rmesh-tile/src/wgsl/: tile_fill_compute.wgsl  tile_gen_scan_compute.wgsl  tile_ranges_compute.wgsl
crates/rmesh-train/: Cargo.toml
crates/rmesh-train/src/: lib.rs  main.rs
crates/rmesh-train/src/wgsl/: adam_compute.wgsl
crates/rmesh-trainable/: Cargo.toml
crates/rmesh-trainable/benches/: trainable_pipeline.rs
crates/rmesh-trainable/examples/: tile_size_sweep.rs
crates/rmesh-trainable/src/: interval_tiled.rs  lib.rs  rasterize.rs
crates/rmesh-trainable/src/wgsl/: backward_interval_tiled.wgsl  interval_generate.wgsl
crates/rmesh-trainable/tests/: kernel_tests.rs
crates/rmesh-util/: Cargo.toml
crates/rmesh-util/src/: camera.rs  compose.rs  gpu_helpers.rs  hot_shader.rs  lib.rs  sh_eval.rs  shared.rs  test_util.rs
crates/rmesh-util/src/wgsl/: common.wgsl  intersect.wgsl  math.wgsl  safe_math.wgsl  sh.wgsl  sh_eval_compute.wgsl
crates/rmesh-viewer/: Cargo.toml
crates/rmesh-viewer-web/: Cargo.toml  STATUS.md  build.sh  serve.sh  test.sh
crates/rmesh-viewer-web/src/: lib.rs
crates/rmesh-viewer-web/web/: index.html  smoketest.html  test.rmesh
crates/rmesh-viewer-web/web/pkg/: rmesh_viewer_web.js
crates/rmesh-viewer/src/: flare.rs  gpu_state.rs  main.rs  render.rs
scripts/: derive_backward.py
