[package]
name = "rmesh-backward"
version = "0.1.0"
edition = "2021"

[dependencies]
rmesh-shaders = { path = "../rmesh-shaders" }
rmesh-render = { path = "../rmesh-render" }
wgpu = { workspace = true }
bytemuck = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
glam = { workspace = true }
rand = "0.9"
rand_chacha = "0.9"
rmesh-data = { path = "../rmesh-data" }
