[package]
name = "rmesh-dsm"
version = "0.1.0"
edition = "2021"

[dependencies]
rmesh-util = { path = "../rmesh-util" }
rmesh-render = { path = "../rmesh-render" }
rmesh-sort = { path = "../rmesh-sort" }
rmesh-compositor = { path = "../rmesh-compositor" }
rmesh-interact = { path = "../rmesh-interact" }
wgpu = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }

[dev-dependencies]
rmesh-data = { path = "../rmesh-data" }
rmesh-util = { path = "../rmesh-util", features = ["test-util"] }
image = { workspace = true }
pollster = { workspace = true }
rand = "0.9"
rand_chacha = "0.9"
half = { workspace = true }
