[package]
name = "rmesh-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
rmesh-render = { path = "../rmesh-render" }
rmesh-backward = { path = "../rmesh-backward" }
rmesh-data = { path = "../rmesh-data" }
rmesh-shaders = { path = "../rmesh-shaders" }
rmesh-train = { path = "../rmesh-train" }
wgpu = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
pyo3 = { workspace = true }
numpy = { workspace = true }
