[package]
name = "rmesh-raytrace"
version = "0.1.0"
edition = "2021"

[dependencies]
rmesh-util = { path = "../rmesh-util" }
rmesh-data = { path = "../rmesh-data" }
wgpu = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
