[package]
name = "rmesh-render"
version = "0.1.0"
edition = "2021"

[dependencies]
rmesh-util = { path = "../rmesh-util" }
rmesh-tile = { path = "../rmesh-tile" }
rmesh-data = { path = "../rmesh-data" }
rmesh-sort = { path = "../rmesh-sort" }
wgpu = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }

[dev-dependencies]
rand = "0.9"
rand_chacha = "0.9"
pollster = { workspace = true }
half = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
rmesh-util = { path = "../rmesh-util", features = ["test-util"] }
rmesh-tile = { path = "../rmesh-tile" }
# Tests exercise the compute-forward tiled rasterizers, which live in rmesh-trainable.
rmesh-trainable = { path = "../rmesh-trainable" }
# Cross-renderer tests compare against the software ray tracer, now in rmesh-raytrace.
rmesh-raytrace = { path = "../rmesh-raytrace" }

[[bench]]
name = "interval_pipeline"
harness = false
