[package]
name = "rmesh-sort"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
rmesh-util = { path = "../rmesh-util" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pollster = { workspace = true }
rand = "0.9"
rand_chacha = "0.9"
rmesh-util = { path = "../rmesh-util", features = ["test-util"] }

[[bench]]
name = "radix_sort"
harness = false
