[package]
name = "rmesh-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
rmesh-shaders = { path = "../rmesh-shaders" }
rmesh-render = { path = "../rmesh-render" }
rmesh-data = { path = "../rmesh-data" }
wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
